<resources>
    <string name="app_name">NewRecipie</string>
    <string name="get_started">Get Started</string>
    <string name="appetit">Appetit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_message">What do you want to \ncook today?</string>
    <string name="categories">Categories</string>
    <string name="view_all">View all</string>
    <string name="popular">Popular</string>
    <string name="random">Random</string>


    <string name="AppName">FoodBrand</string>
    <string name="search_meal_str">search on meal here...</string>
    <string name="latest_dishes_str">Latest Dishes</string>

    <string name="text_no_connectivity">No Connection</string>
    <string name="text_connectivity">Back Online</string>
    <string name="search">Search</string>
    <string name="todo">TODO</string>
    <string name="latest">Latest</string>
</resources>